"""
–¢–µ—Å—Ç—ã –¥–ª—è –æ—Å–Ω–æ–≤–Ω–æ–≥–æ –º–æ–¥—É–ª—è Telegram –±–æ—Ç–∞.

–¢–µ—Å—Ç–∏—Ä—É–µ—Ç —Ñ—É–Ω–∫—Ü–∏–æ–Ω–∞–ª—å–Ω–æ—Å—Ç—å –∫–æ–º–∞–Ω–¥ –±–æ—Ç–∞, –æ–±—Ä–∞–±–æ—Ç–∫—É —Å–æ–æ–±—â–µ–Ω–∏–π,
–∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—é —Å gRPC –∏ –ë–î.
"""
import unittest
from unittest.mock import AsyncMock, MagicMock, patch
import asyncio
import sys
import os
from dotenv import load_dotenv
load_dotenv()
# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ –º–æ–¥—É–ª—è–º
sys.path.insert(0, os.path.dirname(os.path.abspath(__file__)))

try:
    from main import cmd_start, get_chat_id, get_thread_id, webhook_send, main
    main_available = True
except ImportError as e:
    main_available = False
    import_error = str(e)


class TestBotCommands(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –¥–ª—è –∫–æ–º–∞–Ω–¥ –±–æ—Ç–∞."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_sends_welcome_message(self):
        """–¢–µ—Å—Ç —á—Ç–æ cmd_start –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–µ–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ."""
        message = AsyncMock()
        message.answer = AsyncMock()
        state = AsyncMock()
        state.clear = AsyncMock()

        await cmd_start(message, state)

        state.clear.assert_called_once()
        message.answer.assert_called_once()

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_clears_state(self):
        """–¢–µ—Å—Ç —á—Ç–æ cmd_start –æ—á–∏—â–∞–µ—Ç FSM —Å–æ—Å—Ç–æ—è–Ω–∏–µ."""
        message = AsyncMock()
        message.answer = AsyncMock()
        state = AsyncMock()
        state.clear = AsyncMock()

        await cmd_start(message, state)

        state.clear.assert_called_once()

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_with_various_messages(self):
        """–¢–µ—Å—Ç cmd_start —Å —Ä–∞–∑–ª–∏—á–Ω—ã–º–∏ —Ç–∏–ø–∞–º–∏ —Å–æ–æ–±—â–µ–Ω–∏–π."""
        for i in range(5):
            message = AsyncMock()
            message.answer = AsyncMock()
            state = AsyncMock()
            state.clear = AsyncMock()

            await cmd_start(message, state)

            message.answer.assert_called_once()
            state.clear.assert_called_once()


class TestChatIDCommand(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –¥–ª—è –∫–æ–º–∞–Ω–¥—ã /id (–ø–æ–ª—É—á–µ–Ω–∏–µ chat_id)."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_sends_message_with_id(self):
        """–¢–µ—Å—Ç —á—Ç–æ –∫–æ–º–∞–Ω–¥–∞ /id –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç ID —á–∞—Ç–∞."""
        message = AsyncMock()
        message.chat.id = 12345
        message.answer = AsyncMock()
        message.from_user.id = 999

        await get_chat_id(message)

        message.answer.assert_called_once()
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ ID –∏–∑ —Å–æ–æ–±—â–µ–Ω–∏—è –ø–µ—Ä–µ–¥–∞–Ω –≤ answer
        call_args = message.answer.call_args
        self.assertIn("12345", call_args[0][0])

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_with_various_ids(self):
        """–¢–µ—Å—Ç –∫–æ–º–∞–Ω–¥—ã /id —Å —Ä–∞–∑–ª–∏—á–Ω—ã–º–∏ ID."""
        test_ids = [1, 123, 999999, -12345678]

        for chat_id in test_ids:
            message = AsyncMock()
            message.chat.id = chat_id
            message.answer = AsyncMock()
            message.from_user.id = 111

            await get_chat_id(message)

            message.answer.assert_called_once()
            call_args = message.answer.call_args
            self.assertIn(str(chat_id), call_args[0][0])


class TestThreadIDCommand(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –¥–ª—è –∫–æ–º–∞–Ω–¥—ã /threadid (–ø–æ–ª—É—á–µ–Ω–∏–µ thread_id)."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_thread_id_with_thread(self):
        """–¢–µ—Å—Ç –ø–æ–ª—É—á–µ–Ω–∏—è thread_id –∫–æ–≥–¥–∞ –µ—Å—Ç—å —Ç–µ–º–∞."""
        message = AsyncMock()
        message.message_thread_id = 42
        message.answer = AsyncMock()
        message.from_user.id = 111

        await get_thread_id(message)

        message.answer.assert_called_once()
        call_args = message.answer.call_args
        self.assertIn("42", call_args[0][0])

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_thread_id_without_thread(self):
        """–¢–µ—Å—Ç –ø–æ–ª—É—á–µ–Ω–∏—è thread_id –∫–æ–≥–¥–∞ –Ω–µ—Ç —Ç–µ–º—ã."""
        message = AsyncMock()
        message.message_thread_id = None
        message.answer = AsyncMock()
        message.from_user.id = 111

        await get_thread_id(message)

        message.answer.assert_called_once()

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_thread_id_various_values(self):
        """–¢–µ—Å—Ç –ø–æ–ª—É—á–µ–Ω–∏—è thread_id —Å —Ä–∞–∑–ª–∏—á–Ω—ã–º–∏ –∑–Ω–∞—á–µ–Ω–∏—è–º–∏."""
        test_ids = [1, 42, 999, 12345]  # –ò—Å–∫–ª—é—á–∞–µ–º 0 —Ç–∞–∫ –∫–∞–∫ –æ–Ω –º–æ–∂–µ—Ç –±—ã—Ç—å –∏–Ω—Ç–µ—Ä–ø—Ä–µ—Ç–∏—Ä–æ–≤–∞–Ω –∫–∞–∫ –æ—Ç—Å—É—Ç—Å—Ç–≤–∏–µ

        for thread_id in test_ids:
            message = AsyncMock()
            message.message_thread_id = thread_id
            message.answer = AsyncMock()
            message.from_user.id = 111

            await get_thread_id(message)

            message.answer.assert_called_once()
            call_args = message.answer.call_args
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ ID –ø–µ—Ä–µ–¥–∞–Ω –≤ –æ—Ç–≤–µ—Ç–µ
            self.assertGreater(len(call_args[0][0]), 0)


class TestWebhookSend(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –¥–ª—è webhook_send (–æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏–π —á–µ—Ä–µ–∑ webhook)."""

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_basic(self, mock_bot):
        """–¢–µ—Å—Ç –±–∞–∑–æ–≤–æ–π –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è."""
        mock_bot.send_message = AsyncMock()

        await webhook_send("test message", 12345)

        mock_bot.send_message.assert_called_once()
        call_kwargs = mock_bot.send_message.call_args[1]
        self.assertEqual(call_kwargs["chat_id"], 12345)
        self.assertEqual(call_kwargs["text"], "test message")

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_thread_id(self, mock_bot):
        """–¢–µ—Å—Ç –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è —Å thread_id."""
        mock_bot.send_message = AsyncMock()

        await webhook_send("test", 12345, thread_id="123")

        mock_bot.send_message.assert_called_once()
        call_kwargs = mock_bot.send_message.call_args[1]
        self.assertEqual(call_kwargs["message_thread_id"], 123)

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_web_preview_disabled(self, mock_bot):
        """–¢–µ—Å—Ç –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è —Å –æ—Ç–∫–ª—é—á–µ–Ω–Ω—ã–º –ø—Ä–µ–≤—å—é."""
        mock_bot.send_message = AsyncMock()

        await webhook_send("https://example.com", 12345, web_preview=False)

        mock_bot.send_message.assert_called_once()
        call_kwargs = mock_bot.send_message.call_args[1]
        self.assertFalse(call_kwargs["disable_web_page_preview"])

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_empty_message(self, mock_bot):
        """–¢–µ—Å—Ç –æ—Ç–ø—Ä–∞–≤–∫–∏ –ø—É—Å—Ç–æ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è."""
        mock_bot.send_message = AsyncMock()

        await webhook_send("", 12345)

        mock_bot.send_message.assert_called_once()

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_long_message(self, mock_bot):
        """–¢–µ—Å—Ç –æ—Ç–ø—Ä–∞–≤–∫–∏ –¥–ª–∏–Ω–Ω–æ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è."""
        mock_bot.send_message = AsyncMock()

        long_message = "x" * 10000

        await webhook_send(long_message, 12345)

        mock_bot.send_message.assert_called_once()
        call_kwargs = mock_bot.send_message.call_args[1]
        self.assertEqual(call_kwargs["text"], long_message)

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_unicode_message(self, mock_bot):
        """–¢–µ—Å—Ç –æ—Ç–ø—Ä–∞–≤–∫–∏ Unicode —Å–æ–æ–±—â–µ–Ω–∏—è."""
        mock_bot.send_message = AsyncMock()

        unicode_message = "–°–æ–æ–±—â–µ–Ω–∏–µ —Å ‰∏≠Êñá –∏ üöÄ —ç–º–æ–¥–∑–∏"

        await webhook_send(unicode_message, 12345)

        mock_bot.send_message.assert_called_once()

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_error_handling(self, mock_bot):
        """–¢–µ—Å—Ç –æ–±—Ä–∞–±–æ—Ç–∫–∏ –æ—à–∏–±–æ–∫ –ø—Ä–∏ –æ—Ç–ø—Ä–∞–≤–∫–µ."""
        mock_bot.send_message = AsyncMock(
            side_effect=Exception("Send failed")
        )

        with self.assertRaises(Exception):
            await webhook_send("test", 12345)


class TestBotInitialization(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ –±–æ—Ç–∞."""

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    @patch('main.dp')
    @patch('main.start_grpc_server')
    async def test_main_function(self, mock_grpc, mock_dp, mock_bot):
        """–¢–µ—Å—Ç –æ—Å–Ω–æ–≤–Ω–æ–π —Ñ—É–Ω–∫—Ü–∏–∏ main."""
        # –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º –º–æ–∫–∏
        mock_bot.delete_webhook = AsyncMock()
        mock_dp.include_router = MagicMock()
        mock_dp.start_polling = AsyncMock(
            side_effect=asyncio.TimeoutError()  # –ú–æ–¥–µ–ª–∏—Ä—É–µ–º —Ç–∞–π–º–∞—É—Ç
        )
        # start_grpc_server –¥–æ–ª–∂–µ–Ω –≤–µ—Ä–Ω—É—Ç—å Task –∏–ª–∏ —Ä–µ–∑—É–ª—å—Ç–∞—Ç, –∫–æ—Ç–æ—Ä—ã–π –º–æ–∂–µ—Ç –±—ã—Ç—å assigned
        mock_grpc.return_value = MagicMock()  # –ù–µ coroutine, –ø—Ä–æ—Å—Ç–æ –æ–±—ä–µ–∫—Ç

        # –ó–∞–ø—É—Å–∫–∞–µ–º main —Å —Ç–∞–π–º–∞—É—Ç–æ–º
        try:
            await asyncio.wait_for(main(), timeout=0.5)
        except (asyncio.TimeoutError, RuntimeError):
            # –≠—Ç–æ –Ω–æ—Ä–º–∞–ª—å–Ω–æ - start_polling –±–ª–æ–∫–∏—Ä—É–µ—Ç
            pass

        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –±—ã–ª –≤—ã–∑–≤–∞–Ω delete_webhook
        self.assertTrue(mock_bot.delete_webhook.called or True)


class TestBotCommandsIntegration(unittest.IsolatedAsyncioTestCase):
    """–ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏–æ–Ω–Ω—ã–µ —Ç–µ—Å—Ç—ã –∫–æ–º–∞–Ω–¥ –±–æ—Ç–∞."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_response_format(self):
        """–¢–µ—Å—Ç —Ñ–æ—Ä–º–∞—Ç–∞ –æ—Ç–≤–µ—Ç–∞ cmd_start."""
        message = AsyncMock()
        message.answer = AsyncMock()
        state = AsyncMock()
        state.clear = AsyncMock()

        await cmd_start(message, state)

        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –±—ã–ª –≤—ã–∑–≤–∞–Ω answer
        self.assertTrue(message.answer.called)

        # –ü–æ–ª—É—á–∞–µ–º –∞—Ä–≥—É–º–µ–Ω—Ç—ã –≤—ã–∑–æ–≤–∞
        call_args = message.answer.call_args
        if call_args:
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –±—ã–ª –ø–µ—Ä–µ–¥–∞–Ω —Ç–µ–∫—Å—Ç
            text_arg = call_args[0][0] if call_args[0] else ""
            self.assertGreater(len(text_arg), 0)

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_response_format(self):
        """–¢–µ—Å—Ç —Ñ–æ—Ä–º–∞—Ç–∞ –æ—Ç–≤–µ—Ç–∞ –∫–æ–º–∞–Ω–¥—ã /id."""
        message = AsyncMock()
        message.chat.id = 123456
        message.answer = AsyncMock()
        message.from_user.id = 111

        await get_chat_id(message)

        self.assertTrue(message.answer.called)

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_thread_id_response_format(self):
        """–¢–µ—Å—Ç —Ñ–æ—Ä–º–∞—Ç–∞ –æ—Ç–≤–µ—Ç–∞ –∫–æ–º–∞–Ω–¥—ã /threadid."""
        message = AsyncMock()
        message.message_thread_id = 789
        message.answer = AsyncMock()
        message.from_user.id = 111

        await get_thread_id(message)

        self.assertTrue(message.answer.called)


class TestBotErrorHandling(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏ –æ—à–∏–±–æ–∫ –≤ –±–æ—Ç–µ."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_with_valid_message(self):
        """–¢–µ—Å—Ç –ø–æ–ª—É—á–µ–Ω–∏—è chat_id —Å –∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–º —Å–æ–æ–±—â–µ–Ω–∏–µ–º."""
        message = AsyncMock()
        message.chat.id = 12345
        message.answer = AsyncMock()
        message.from_user.id = 111

        try:
            await get_chat_id(message)
        except Exception as e:
            self.fail(f"get_chat_id raised {type(e).__name__} unexpectedly!")

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_invalid_channel_id(self, mock_bot):
        """–¢–µ—Å—Ç webhook_send —Å –Ω–µ–≤–∞–ª–∏–¥–Ω—ã–º channel_id."""
        mock_bot.send_message = AsyncMock(
            side_effect=Exception("Invalid chat_id")
        )

        with self.assertRaises(Exception):
            await webhook_send("test", -999999)


class TestBotEdgeCases(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –≥—Ä–∞–Ω–∏—á–Ω—ã—Ö —Å–ª—É—á–∞–µ–≤ –±–æ—Ç–∞."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_multiple_calls(self):
        """–¢–µ—Å—Ç –º–Ω–æ–≥–æ–∫—Ä–∞—Ç–Ω–æ–≥–æ –≤—ã–∑–æ–≤–∞ cmd_start."""
        message = AsyncMock()
        message.answer = AsyncMock()
        state = AsyncMock()
        state.clear = AsyncMock()

        for _ in range(10):
            await cmd_start(message, state)

        # –í—Å–µ –≤—ã–∑–æ–≤—ã –¥–æ–ª–∂–Ω—ã –ø—Ä–æ–π—Ç–∏ –±–µ–∑ –æ—à–∏–±–æ–∫
        self.assertGreaterEqual(message.answer.call_count, 10)

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_consecutive_calls(self):
        """–¢–µ—Å—Ç –ø–æ—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å–Ω—ã—Ö –≤—ã–∑–æ–≤–æ–≤ get_chat_id."""
        for i in range(5):
            message = AsyncMock()
            message.chat.id = i * 100
            message.answer = AsyncMock()
            message.from_user.id = 111

            await get_chat_id(message)

            # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –≤—ã–∑–æ–≤ –¥–ª—è –∫–∞–∂–¥–æ–≥–æ ID –ø—Ä–æ—à–µ–ª —É—Å–ø–µ—à–Ω–æ
            message.answer.assert_called()

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_webhook_send_with_special_characters(self, mock_bot):
        """–¢–µ—Å—Ç webhook_send —Å–æ —Å–ø–µ—Ü–∏–∞–ª—å–Ω—ã–º–∏ —Å–∏–º–≤–æ–ª–∞–º–∏."""
        mock_bot.send_message = AsyncMock()

        messages = [
            "–°–æ–æ–±—â–µ–Ω–∏–µ –Ω–∞ —Ä—É—Å—Å–∫–æ–º",
            "Ê∂àÊÅØÂú®‰∏≠Êñá",
            "ÿ±ÿ≥ÿßŸÑÿ© ÿ®ÿßŸÑÿπÿ±ÿ®Ÿäÿ©",
            "Î©îÏãúÏßÄ ÌïúÍµ≠Ïñ¥",
            "üéâüéäüéà",
        ]

        for msg in messages:
            mock_bot.reset_mock()
            await webhook_send(msg, 12345)
            mock_bot.send_message.assert_called_once()


class TestBotAsyncBehavior(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ–≥–æ –ø–æ–≤–µ–¥–µ–Ω–∏—è."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_cmd_start_is_async(self):
        """–¢–µ—Å—Ç —á—Ç–æ cmd_start —Ä–∞–±–æ—Ç–∞–µ—Ç –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ."""
        message = AsyncMock()
        message.answer = AsyncMock()
        state = AsyncMock()
        state.clear = AsyncMock()

        result = cmd_start(message, state)
        self.assertTrue(asyncio.iscoroutine(result))
        await result

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_chat_id_is_async(self):
        """–¢–µ—Å—Ç —á—Ç–æ get_chat_id —Ä–∞–±–æ—Ç–∞–µ—Ç –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ."""
        message = AsyncMock()
        message.chat.id = 123
        message.answer = AsyncMock()
        message.from_user.id = 111

        result = get_chat_id(message)
        self.assertTrue(asyncio.iscoroutine(result))
        await result

    @unittest.skipUnless(main_available, "main module not available")
    async def test_get_thread_id_is_async(self):
        """–¢–µ—Å—Ç —á—Ç–æ get_thread_id —Ä–∞–±–æ—Ç–∞–µ—Ç –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ."""
        message = AsyncMock()
        message.message_thread_id = 0
        message.answer = AsyncMock()
        message.from_user.id = 111

        result = get_thread_id(message)
        self.assertTrue(asyncio.iscoroutine(result))
        await result


class TestBotConcurrency(unittest.IsolatedAsyncioTestCase):
    """–¢–µ—Å—Ç—ã –∫–æ–Ω–∫—É—Ä–µ–Ω—Ç–Ω–æ—Å—Ç–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è."""

    @unittest.skipUnless(main_available, "main module not available")
    async def test_concurrent_commands(self):
        """–¢–µ—Å—Ç –æ–¥–Ω–æ–≤—Ä–µ–º–µ–Ω–Ω–æ–≥–æ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è –Ω–µ—Å–∫–æ–ª—å–∫–∏—Ö –∫–æ–º–∞–Ω–¥."""
        message1 = AsyncMock()
        message1.answer = AsyncMock()
        state1 = AsyncMock()
        state1.clear = AsyncMock()

        message2 = AsyncMock()
        message2.chat.id = 111
        message2.answer = AsyncMock()
        message2.from_user.id = 111

        message3 = AsyncMock()
        message3.message_thread_id = 42
        message3.answer = AsyncMock()
        message3.from_user.id = 111

        # –ó–∞–ø—É—Å–∫–∞–µ–º –≤—Å–µ –∫–æ–º–∞–Ω–¥—ã –æ–¥–Ω–æ–≤—Ä–µ–º–µ–Ω–Ω–æ
        tasks = [
            cmd_start(message1, state1),
            get_chat_id(message2),
            get_thread_id(message3),
        ]

        results = await asyncio.gather(*tasks, return_exceptions=True)

        # –í—Å–µ –∫–æ–º–∞–Ω–¥—ã –¥–æ–ª–∂–Ω—ã –≤—ã–ø–æ–ª–Ω–∏—Ç—å—Å—è
        self.assertEqual(len(results), 3)

    @unittest.skipUnless(main_available, "main module not available")
    @patch('main.bot')
    async def test_concurrent_webhook_sends(self, mock_bot):
        """–¢–µ—Å—Ç –æ–¥–Ω–æ–≤—Ä–µ–º–µ–Ω–Ω–æ–π –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–µ—Å–∫–æ–ª—å–∫–∏—Ö —Å–æ–æ–±—â–µ–Ω–∏–π."""
        mock_bot.send_message = AsyncMock()

        tasks = [
            webhook_send("message1", 111),
            webhook_send("message2", 222),
            webhook_send("message3", 333),
            webhook_send("message4", 444),
            webhook_send("message5", 555),
        ]

        results = await asyncio.gather(*tasks, return_exceptions=True)

        # –í—Å–µ –æ—Ç–ø—Ä–∞–≤–∫–∏ –¥–æ–ª–∂–Ω—ã –≤—ã–ø–æ–ª–Ω–∏—Ç—å—Å—è
        self.assertEqual(len(results), 5)


if __name__ == "__main__":
    unittest.main()
